# create-astro-gcal

./: .coverage  .gitignore  CALENDARS.md  README.md  config.py  main.py  pyproject.toml  requirements.txt  test_aspect_count.py
astro/: almanac.py  aspects.py  conjunctions.py  eclipses.py  engine.py  moon_features.py  moon_phases.py  patterns.py  retrograde.py  seasons.py  year_progress.py  zodiac.py
tests/: conftest.py  test_almanac.py  test_aspects.py  test_coverage_gaps.py  test_dupes_general.py  test_eclipses.py  test_edge_cases.py  test_engine.py  test_ics_writer.py  test_minor_calcs.py  test_moon_features_dupe.py  test_patterns.py  test_pluto_2024.py  test_retrograde_specific.py
utils/: engine_helper.py  geocoding.py  ics_writer.py
